kubernetes/aws-manifest-files/backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
spec:
  selector:
    app: backend
  ports:
    - port: 3000
      protocol: TCP
      targetPort: 3000

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
spec:
  selector:
    matchLabels:
      app: backend
  replicas: 1
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: 341641263178.dkr.ecr.ap-southeast-1.amazonaws.com/backend:1
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
