kubernetes/aws-manifest-files/frontend.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
spec:
  selector:
    app: frontend
  ports:
    - port: 3000
      protocol: TCP
      targetPort: 3000
  type: ClusterIP

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
spec:
  selector:
    matchLabels:
      app: frontend
  replicas: 1
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: react-app
          image: 341641263178.dkr.ecr.ap-southeast-1.amazonaws.com/frontend:8a846ab
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
          command: ["npm", "start", "--", "--host", "0.0.0.0"]
