kubernetes/aws-manifest-files/mongodb.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongo
  labels:
    name: mongo
spec:
  selector:
    name: mongo
  ports:
    - port: 27017
      protocol: TCP
      targetPort: 27017
  type: ClusterIP
---
apiVersion: v1
kind: Pod
metadata:
  name: mongo-lite
  labels:
    app: mongo-lite
spec:
  terminationGracePeriodSeconds: 10
  containers:
  - name: mongo
    image: mongo:6.0
    ports:
      - containerPort: 27017
    resources:
      requests:
        memory: "128Mi"
        cpu: "100m"
      limits:
        memory: "256Mi"
        cpu: "250m"
    volumeMounts:
      - name: mongo-data
        mountPath: /data/db
  volumes:
    - name: mongo-data
      emptyDir: {}
