kubernetes/aws-manifest-files/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      # Backend API (NO rewrite!)
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: backend
            port:
              number: 3000

      # Frontend single-page app
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend
            port:
              number: 3000
